# quant-platform-demo

./: .gitignore  README.md  pyproject.toml
configs/: ml_demo.json
docs/: architecture.md  ml-pipeline.md  state-machines.md
scripts/: generate_synthetic_data.py  run_backtest.py  run_pipeline.py
scripts/ml/: run_pipeline.py
src/quant_demo/: __init__.py  events.py  lifecycle.py  risk.py  state.py  strategy_protocol.py
src/quant_demo/engine/: backtest.py  bar_feed.py  features.py  model_layer.py  trade_constructor.py
src/quant_demo/execution/: sim_broker.py
src/quant_demo/ml/: config.py  data_prep.py  predict.py  registry.py
src/quant_demo/runner/: config.py  pipeline_runner.py  reconciliation.py  state_reducers.py  strategy_factory.py
src/quant_demo/strategies/: demo_classifier.py  ml_pipeline_strategy.py  sma_crossover.py
tests/: test_backtest.py  test_pipeline_layers.py  test_pipeline_runner.py  test_risk.py  test_state_machine.py  test_state_reducers.py
