[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform-demo"
version = "0.1.0"
description = "Public demo of event-driven quant platform architecture"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
